; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswscale/extr_utils.c_sws_getContext.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswscale/extr_utils.c_sws_getContext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @sws_getContext(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32* %7, i32* %8, double* %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca double*, align 8
  %22 = alloca i32*, align 8
  store i32 %0, i32* %12, align 4
  store i32 %1, i32* %13, align 4
  store i32 %2, i32* %14, align 4
  store i32 %3, i32* %15, align 4
  store i32 %4, i32* %16, align 4
  store i32 %5, i32* %17, align 4
  store i32 %6, i32* %18, align 4
  store i32* %7, i32** %19, align 8
  store i32* %8, i32** %20, align 8
  store double* %9, double** %21, align 8
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %13, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %15, align 4
  %27 = load i32, i32* %16, align 4
  %28 = load i32, i32* %17, align 4
  %29 = load i32, i32* %18, align 4
  %30 = load double*, double** %21, align 8
  %31 = call i32* @sws_alloc_set_opts(i32 %23, i32 %24, i32 %25, i32 %26, i32 %27, i32 %28, i32 %29, double* %30)
  store i32* %31, i32** %22, align 8
  %32 = load i32*, i32** %22, align 8
  %33 = icmp ne i32* %32, null
  br i1 %33, label %35, label %34

34:                                               ; preds = %10
  store i32* null, i32** %11, align 8
  br label %46

35:                                               ; preds = %10
  %36 = load i32*, i32** %22, align 8
  %37 = load i32*, i32** %19, align 8
  %38 = load i32*, i32** %20, align 8
  %39 = call i64 @sws_init_context(i32* %36, i32* %37, i32* %38)
  %40 = icmp slt i64 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %35
  %42 = load i32*, i32** %22, align 8
  %43 = call i32 @sws_freeContext(i32* %42)
  store i32* null, i32** %11, align 8
  br label %46

44:                                               ; preds = %35
  %45 = load i32*, i32** %22, align 8
  store i32* %45, i32** %11, align 8
  br label %46

46:                                               ; preds = %44, %41, %34
  %47 = load i32*, i32** %11, align 8
  ret i32* %47
}

declare dso_local i32* @sws_alloc_set_opts(i32, i32, i32, i32, i32, i32, i32, double*) #1

declare dso_local i64 @sws_init_context(i32*, i32*, i32*) #1

declare dso_local i32 @sws_freeContext(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
